--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,11 @@
 body {
   padding: 0;
-  background-color: slategray;
-  color: navajowhite;
+  background-color: rgb(162, 228, 213);
+  color: rgb(24, 38, 234);
 }
 
 h1 {
-  color: orange;
+  color: rgb(13, 190, 229);
 }
 
 figure {
